fix: border color is not full display when `border-collapse: collapse` (#81)
* fix: border color is not full display when `border-collapse: collapse`

* refactor: extract delta check

* fix: set correct merged cell border

* test: add more border test

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -48,8 +48,16 @@
         display: table-column;
         table-layout: fixed;
       }
+      tr + tr {
+        td {
+          border-top: none;
+        }
+      }
       td {
         border: 1px solid #a1a1aa;
+        & + td {
+          border-left: none;
+        }
       }
     }
   }
